# CuraChain

./: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  LICENSE  README.md  Readme.md  package.json
programs/cura/: Cargo.toml
programs/cura/src/: lib.rs  state.rs
programs/cura/src/instructions/: create_donation.rs  create_patient_case.rs  initialize.rs  mod.rs  verify_case.rs  withdraw_funds.rs
programs/curachain/: Cargo.toml
programs/curachain/src/: constants.rs  errors.rs  lib.rs
programs/curachain/src/instructions/: admin_override_case.rs  compliance.rs  create_escrow.rs  create_patient_case.rs  donate.rs  donate_funds.rs  finalize_verification.rs  initialize_counter.rs  initialize_patient_spl_account.rs  mod.rs  recognize.rs  release_funds.rs  report.rs  submit_case.rs  track_status.rs  verify_case.rs  verify_patient_case.rs  view_case_details.rs  whitelist.rs
programs/curachain/src/state/: case_counter.rs  donation_pda.rs  donor_recognition.rs  escrow_pda.rs  mod.rs  patient_case.rs  verification_pda.rs  verifier_registry.rs
programs/curachain/src/states/: accounts.rs  contexts.rs  errors.rs
tests/: cura.ts  curachain.ts
